# hid_keyboard

./: README.md
01_FW/: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  Kconfig  README.md  README.rst  kb_nrf52840_feather.overlay  keybird.code-workspace  nrf52-bindings.h  nrf5340dk_nrf5340_cpuapp.overlay  prj.conf  prj_left.conf  prj_right.conf
01_FW/board_overlays/: nrf5340dk_nrf5340_cpuapp.overlay
01_FW/boards/arm/kb_nrf52840_feather/: Kconfig  Kconfig.board  Kconfig.defconfig  board.cmake  kb_nrf52840_feather.dts  kb_nrf52840_feather.yaml  kb_nrf52840_feather_defconfig
01_FW/boards/arm/kb_nrf52840_feather/doc/: index.rst
01_FW/child_image/: hci_ipc.conf
01_FW/dts/bindings/: kb-mtrx-out.yaml
01_FW/scripts/: update_search_path.py
01_FW/src/: btns.c  btns.h  central.c  central.h  common.h  kb_ble.c  kb_ble.h  kb_keys.c  kb_keys.h  key_matrix.c  keys.c  keys.h  main.c  scan_codes.h  utils.h
01_FW/src/kb_ble/: CMakeLists.txt  ble.c  ble.h  central.c  central.h  kb_ble.c  kb_ble.h  kb_cent.c  kb_cent.h  kb_hid_common.c  kb_hid_common.h  kb_periph.c  kb_periph.h  peripheral.c  peripheral.h
02_HW/: .gitignore
02_HW/keybird_left/: fp-info-cache  keybird_left.kicad_prl  keybird_left.kicad_pro  temp_proj.kicad_pcb  temp_proj.kicad_prl  temp_proj.kicad_pro
02_HW/keybird_right/: _autosave-keybird_right.kicad_pcb  keybird_right.kicad_pcb  keybird_right.kicad_prl  keybird_right.kicad_pro  keybird_right.kicad_sch
02_HW/scripts/: copy_lines.py  (+1 more)
03_Mechanical/: KeyBird.20250224-234554.FCBak  KeyBird.FCStd  NOTES.md  README.md
src/: main.c
(+55 files in other folders)
